package com.iaramartins.model;

import java.time.LocalDateTime;
import java.util.List;

import com.iaramartins.model.converterjpa.StatusPedidoConverter;

import jakarta.persistence.CascadeType;
import jakarta.persistence.Convert;
import jakarta.persistence.Entity;
import jakarta.persistence.JoinColumn;
import jakarta.persistence.ManyToOne;
import jakarta.persistence.OneToMany;
import jakarta.persistence.OneToOne;

@Entity
public class Pedido extends DefaultEntity{
    @ManyToOne
    @JoinColumn(name = "cliente_id")
    private Cliente cliente;

    @OneToMany(mappedBy = "pedido", cascade = CascadeType.ALL)
    private List<ItemPedido> itens;

    @OneToOne(mappedBy = "pedido", cascade = CascadeType.ALL, orphanRemoval = true)
    private Pagamento pagamento;

    private LocalDateTime data = LocalDateTime.now();
    private Double total;
    @Convert(converter = StatusPedidoConverter.class)
    private String status = "PENDENTE"; // Ex: PENDENTE, CONCLUIDO, CANCELADO

    public Cliente getCliente() {
        return cliente;
    }

    public void setCliente(Cliente cliente) {
        this.cliente = cliente;
    }

    public List<ItemPedido> getItens() {
        return itens;
    }

    public void setItens(List<ItemPedido> itens) {
        this.itens = itens;
    }

    public Pagamento getPagamento() {
        return pagamento;
    }

    public void setPagamento(Pagamento pagamento) {
        this.pagamento = pagamento;
        if (pagamento != null) {
            pagamento.setPedido(this); // Mantém a consistência bidirecional
        }
    }

    public LocalDateTime getData() {
        return data;
    }

    public void setData(LocalDateTime data) {
        this.data = data;
    }

    public Double getTotal() {
        return total;
    }

    public void setTotal(Double total) {
        if (total <= 0) throw new IllegalArgumentException("Total inválido");
        this.total = total;
    }

    public String getStatus() {
        return status;
    }

    public void setStatus(String status) {
        List<String> statusValidos = List.of("PENDENTE", "PAGO", "CANCELADO", "ENVIADO", "ENTREGUE");
        if (!statusValidos.contains(status)) {
        throw new IllegalArgumentException("Status inválido: " + status);
    }
        this.status = status;
    }

     // Método para adicionar item ao pedido
     public void addItem(ItemPedido item) {
        this.itens.add(item);
        item.setPedido(this);
    }

    // Método para calcular o total 
    public void calcularTotal() {
        this.total = itens.stream()
            .mapToDouble(item -> item.getPrecoUnitario() * item.getQuantidade())
            .sum();
    }


}
