package com.iaramartins.model;

public enum Role {
    CLIENTE,
    ADMIN
}
